--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,42 +5,39 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/linear_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:id="@+id/linear_ll"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_baseline_arrow_back_24"
-            android:layout_alignParentLeft="true"/>
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
 
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="paramètres du compte"
-            android:textSize="16dp"
-            android:textStyle="bold"
-            android:textColor="@color/black"
+            android:layout_weight="1"
             android:gravity="center"
-            />
+            android:text="paramètres du compte"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tollbar_text_SeDeconnecter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Se déconnecter"
-            android:textSize="15dp"
-            android:textStyle="normal"
-            android:textColor="@color/blue"
-            android:gravity="center"
             android:layout_alignParentRight="true"
-            />
-
+            android:gravity="center"
+            android:text="Se déconnecter"
+            android:textColor="@color/blue"
+            android:textSize="15dp"
+            android:textStyle="normal" />
 
 
     </LinearLayout>
