--- a/app/src/main/res/layout/activity_list_appointments.xml
+++ b/app/src/main/res/layout/activity_list_appointments.xml
@@ -61,11 +61,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="25dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:cardBackgroundColor="@color/gray"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
@@ -77,41 +76,41 @@
             <LinearLayout
                 android:layout_width="116dp"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:background="@color/colorAccent">
+                android:background="@color/gray"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/appointement_month"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="July"
-                    android:layout_weight="1"
-                    android:textColor="#000000"
                     android:layout_gravity="center"
-                    android:textSize="14sp"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop="16dp"
+                    android:layout_weight="1"
+                    android:text="Janvier"
+                    android:textColor="#000000"
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/appointement_day"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_weight="2"
                     android:gravity="center"
                     android:text="19"
-                    android:textStyle="bold"
-                    android:layout_weight="2"
                     android:textColor="#d81818"
-                    android:textSize="28sp" />
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/appointement_day_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="#000000"
                     android:layout_gravity="center"
+                    android:layout_marginBottom="14dp"
                     android:layout_weight="1"
-                    android:text="WED"
-                    android:layout_marginBottom="14dp"/>
+                    android:text="Mer"
+                    android:textColor="#000000" />
             </LinearLayout>
 
             <RelativeLayout
@@ -128,8 +127,8 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="17dp"
                     android:maxLines="1"
-                    android:text="Timming"
-                    android:textColor="#b8b8b8"
+                    android:text="Temps"
+                    android:textColor="@color/Mix"
                     android:textSize="12sp" />
 
                 <TextView
@@ -142,8 +141,8 @@
                     android:layout_marginLeft="164dp"
                     android:layout_marginTop="19dp"
                     android:maxLines="1"
-                    android:text="Doctor"
-                    android:textColor="#b8b8b8"
+                    android:text="Vaccin"
+                    android:textColor="@color/black"
                     android:textSize="12sp" />
 
                 <TextView
@@ -158,7 +157,7 @@
                     android:layout_marginTop="35dp"
                     android:maxLines="1"
                     android:text="5:00 PM"
-                    android:textColor="#555555"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <TextView
@@ -171,8 +170,8 @@
                     android:layout_marginStart="6dp"
                     android:layout_marginLeft="6dp"
                     android:layout_marginTop="21dp"
-                    android:text="Hospitalisation"
-                    android:textColor="@color/colorAccent"
+                    android:text="en cours"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <TextView
@@ -185,8 +184,8 @@
                     android:layout_marginStart="7dp"
                     android:layout_marginLeft="7dp"
                     android:layout_marginTop="6dp"
-                    android:text="Appointement type"
-                    android:textColor="#b8b8b8"
+                    android:text="Type de Rendez_vous"
+                    android:textColor="@color/Mix"
                     android:textSize="12sp" />
 
                 <TextView
@@ -199,14 +198,14 @@
                     android:layout_marginStart="164dp"
                     android:layout_marginLeft="164dp"
                     android:layout_marginTop="-57dp"
-                    android:text="Doctor NAME"
-                    android:textColor="#555555"
+                    android:text="Sinovac"
+                    android:textColor="@color/Mix"
                     android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/voir_fiche_btn2"
-                    android:layout_width="72dp"
-                    android:layout_height="26dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
@@ -216,9 +215,9 @@
                     android:layout_marginEnd="33dp"
                     android:layout_marginRight="33dp"
                     android:layout_marginBottom="14dp"
-                    android:background="@drawable/button_radius_accent_color"
-                    android:text="Voir fiche"
-
+                    android:backgroundTint="@color/gray"
+                    android:text="detail"
+                    android:textColor="@color/black"
                     android:textSize="10sp" />
 
             </RelativeLayout>
@@ -232,15 +231,14 @@
         android:layout_height="wrap_content"
         android:layout_margin="32dp">
 
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="370dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:backgroundTint="@color/blue"
-        android:src="@drawable/ic_baseline_add_24" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="136dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:backgroundTint="@color/blue"
+            android:src="@drawable/ic_baseline_add_24" />
     </RelativeLayout>
 
 </LinearLayout>
