--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -9,4 +9,19 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Mix">#0F33B6</color>
     <color name="blue">#0F71BF</color>
+    <color name="gray">#3658C4F6</color>
+
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorPrimary">#26418f</color>
+    <color name="colorPrimaryDark">#001064</color>
+
+
+    <color name="a">#0F9D58</color>
+    <color name="ab">#BDBDBD</color>
+    <color name="abc">#808080</color>
+    <color name="abcd">#0F9D58</color>
+    <color name="abcde">#808080</color>
+    <color name="abcdef">#eeeeee</color>
+
+
 </resources>
