--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
             android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/ic_baseline_email_24"
             android:ems="10"
+
             android:hint="Adresse Email"
             android:inputType="textEmailSubject"
             android:textSize="24sp" />
@@ -74,7 +75,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="126dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:orientation="vertical"
         >
 
@@ -86,7 +87,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/Mix"
+
+            android:backgroundTint="@color/blue"
             android:text="Se connecter"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -113,7 +115,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/Mix"
+            android:backgroundTint="@color/blue"
             android:text="S'inscrire"
             android:textSize="20sp"
             android:textStyle="bold"
