--- a/app/src/main/res/layout/fragment_center.xml
+++ b/app/src/main/res/layout/fragment_center.xml
@@ -6,6 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".CenterFragment"
     android:id="@+id/fitCenter">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/blue"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:text="Choisir un centre"
+        android:layout_marginTop="30dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="70dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="831dp"
@@ -13,6 +34,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
 
             <Button
                 android:id="@+id/skipButton"
@@ -25,12 +47,6 @@
                 android:textColor="@color/Mix"
                 android:textSize="20sp" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="centre"
-                android:textSize="50dp">
-            </TextView>
         </RelativeLayout>
 
 
