--- a/app/src/main/res/layout/fragment_center.xml
+++ b/app/src/main/res/layout/fragment_center.xml
@@ -9,13 +9,13 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="51dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text="Choisissez un centre"
         android:textColor="@color/blue"
         android:textSize="23sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:text="Choisir un centre"
-        android:layout_marginTop="30dp"/>
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -24,7 +24,6 @@
         android:background="@color/white"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="70dp">
-
     </androidx.recyclerview.widget.RecyclerView>
 
         <RelativeLayout
@@ -41,76 +40,52 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="303dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="284dp"
+                android:layout_marginTop="0dp"
                 android:background="#00000000"
-                android:text="Skip"
+                android:text="Quitter"
                 android:textColor="@color/Mix"
                 android:textSize="20sp" />
 
         </RelativeLayout>
 
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ellipse2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/ellipse1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="7dp"
-                android:layout_marginBottom="0dp"
-                android:src="@drawable/ellipse1"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <ImageView
-                android:id="@+id/ellipse2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="3dp"
-                android:layout_marginBottom="3dp"
-                android:src="@drawable/ellipse2"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <Button
-                android:id="@+id/backbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginBottom="6dp"
-                android:background="#00000000"
-                android:text="Back"
-                android:textColor="@color/Mix"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="3dp"
+            android:src="@drawable/ellipse2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
-            <Button
-                android:id="@+id/nextbtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="3dp"
-                android:layout_marginBottom="6dp"
-                android:background="#00000000"
-                android:text="Next"
-                android:textColor="@color/Mix"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/ellipse2" />
+        <Button
+            android:id="@+id/nextbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="6dp"
+            android:background="#00000000"
+            android:text="suivant"
+            android:textColor="@color/Mix"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/ellipse2" />
 
-        </RelativeLayout>
+    </RelativeLayout>
 
 </FrameLayout>
