--- a/app/src/main/res/layout/fragment_dateragment.xml
+++ b/app/src/main/res/layout/fragment_dateragment.xml
@@ -68,9 +68,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="303dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="282dp"
+            android:layout_marginTop="0dp"
             android:background="#00000000"
-            android:text="Skip"
+            android:text="Quitter"
             android:textColor="@color/blue"
             android:textSize="20sp" />
     </RelativeLayout>
@@ -117,7 +119,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginBottom="6dp"
             android:background="#00000000"
-            android:text="Back"
+            android:text="Retour"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -132,7 +134,7 @@
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="6dp"
             android:background="#00000000"
-            android:text="Next"
+            android:text="suivant"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ellipse2" />
