--- a/app/src/main/res/layout/list_apointment_design.xml
+++ b/app/src/main/res/layout/list_apointment_design.xml
@@ -1,64 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ListAppointments"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="210dp"
-        android:background="@drawable/rectangle_round"
-        android:elevation="6dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/Bienvenue"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="-50dp"
-            android:layout_marginRight="30dp"
-            android:gravity="center"
-            android:text="Bienvenue "
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="normal" />
-
-        <TextView
-            android:id="@+id/listAppointment_NameUser"
-            android:layout_width="68dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="244dp"
-            android:layout_marginEnd="99dp"
-            android:layout_marginRight="-312dp"
-            android:layout_marginBottom="116dp"
-            android:layout_toLeftOf="@+id/Bienvenue"
-            android:text="Name"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-        <ImageView
-            android:id="@+id/listappointement_image_profil"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="355dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/ic_baseline_person_pin_24" />
-
-    </RelativeLayout>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginEnd="8dp"
@@ -118,6 +64,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
@@ -134,6 +81,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/vaccin"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
@@ -202,43 +150,12 @@
                     android:textColor="@color/Mix"
                     android:textSize="14sp" />
 
-                <Button
-                    android:id="@+id/voir_fiche_btn2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="38dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="154dp"
-                    android:layout_marginLeft="154dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="33dp"
-                    android:layout_marginRight="33dp"
-                    android:layout_marginBottom="14dp"
-                    android:backgroundTint="@color/gray"
-                    android:text="detail"
-                    android:textColor="@color/black"
-                    android:textSize="10sp" />
+
 
             </RelativeLayout>
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="32dp">
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="136dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:backgroundTint="@color/blue"
-            android:src="@drawable/ic_baseline_add_24" />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
