--- a/app/src/main/res/drawable-v24/bg_btn.xml
+++ b/app/src/main/res/drawable-v24/bg_btn.xml
@@ -4,5 +4,5 @@
 
     <corners android:radius="80dp"/>
     <stroke android:width="1dp"
-        android:color="@color/Mix"/>
+        android:color="@color/blue"/>
 </shape>
