--- a/app/src/main/res/layout/activity_appointment_list.xml
+++ b/app/src/main/res/layout/activity_appointment_list.xml
@@ -66,7 +66,8 @@
            android:layout_width="match_parent"
            android:layout_height="358dp"
            android:layout_marginBottom="70dp"
-           android:background="@color/white">
+           >
+
 
        </androidx.recyclerview.widget.RecyclerView>
 
@@ -77,7 +78,10 @@
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/blue"
-           android:src="@drawable/ic_baseline_add_24" />
+           android:src="@drawable/ic_baseline_add_24"
+
+           />
+
    </RelativeLayout>
 
 
