--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,24 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditProfile"
-    android:layout_marginLeft="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
     android:layout_marginRight="20dp">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title">
+        android:id="@+id/title"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/editprofil_image_arrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/ic_baseline_arrow_back_24" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Editer profil"
-            android:textColor="@color/white"
-            android:gravity="center"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="75dp"
-            android:textSize="25sp"
-            android:background="@color/Mix" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/blue"
+            android:gravity="center"
+            android:text="Editer profil"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
     </LinearLayout>
 
@@ -81,12 +94,13 @@
         android:textStyle="bold" />
 
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:id="@+id/email"
         android:layout_below="@id/prenom"
-        android:layout_toRightOf="@id/view_email"/>
+        android:hint="saisir votre email"
+        android:layout_toRightOf="@id/view_email"
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -165,15 +179,28 @@
 
     <Button
         android:id="@+id/save"
-        android:layout_width="match_parent"
+        android:layout_width="166dp"
         android:layout_height="50dp"
         android:layout_below="@id/view_sex"
-        android:layout_marginLeft="50dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="150dp"
-        android:layout_marginRight="50dp"
-        android:backgroundTint="@color/Mix"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/blue"
         android:text="Enregistrer"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/editprofil_button_cancel"
+        android:layout_width="166dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/view_sex"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="150dp"
+        android:layout_toRightOf="@+id/save"
+        android:backgroundTint="@color/blue"
+        android:text="Annuler"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
 </RelativeLayout>
