--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,14 +10,6 @@
     android:gravity="center">
 
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/login_image_loginApp"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginBottom="40dp"
-        android:src="@drawable/logo6"
-        />
-
     <!-- <ImageView
          android:id="@+id/login_image_loginApp"
          android:layout_width="184dp"
@@ -26,6 +18,13 @@
          android:src="@drawable/logo4"
 
          /> -->
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/login_image_loginApp"
+        android:layout_width="121dp"
+        android:layout_height="131dp"
+        android:layout_marginBottom="40dp"
+        android:src="@drawable/nb" />
 
     <TextView
         android:id="@+id/login_text_title"
