--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="110dp"
             android:layout_marginEnd="176dp"
             android:text="code QR"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             android:textSize="20dp"
             android:textStyle="bold" />
 
