--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,6 +22,7 @@
         android:textSize="50dp" />
 
     <LinearLayout
+        android:id="@+id/linearLayoutChamps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -29,7 +30,6 @@
         android:layout_marginBottom="70dp"
         android:gravity="center"
         android:orientation="vertical">
-
 
 
         <EditText
@@ -52,6 +52,7 @@
             android:hint="Mot de passe"
             android:inputType="textPassword"
             android:textSize="24sp" />
+
         <EditText
             android:id="@+id/register_edittext_Confirmpassword"
             android:layout_width="300dp"
@@ -62,7 +63,7 @@
             android:hint="Confirmer le mot de passe"
             android:inputType="textPassword"
             android:textSize="24sp" />
-        <Button
+        <!--   <Button
             android:id="@+id/register_button_inscrire"
             android:layout_width="match_parent"
             android:layout_height="60dp"
@@ -70,27 +71,37 @@
             android:layout_marginTop="60dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/Mix"
+            android:backgroundTint="@color/blue"
             android:text="Se connecter"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"/>  !-->
 
-        <!-- <Button
-             android:id="@+id/register_button_inscrire"
-             android:layout_width="200dp"
-             android:layout_height="wrap_content"
-             android:layout_gravity="center"
-             android:layout_marginLeft="30dp"
-             android:layout_marginRight="20dp"
-             android:layout_marginTop="60dp"
-             android:background="@color/Mix"
-             android:fontFamily="@font/amaranth"
-             android:gravity="center"
-             android:text="S'inscrire"
-             android:textColor="@color/black"
-             android:textSize="20sp"
-             android:textStyle="bold" /> -->
     </LinearLayout>
 
+    <Button
+        android:id="@+id/register_button_inscrire"
+        android:layout_width="166dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/linearLayoutChamps"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/blue"
+        android:text="Enregistrer"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/register_button_cancel"
+        android:layout_width="166dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/linearLayoutChamps"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_toRightOf="@+id/register_button_inscrire"
+        android:backgroundTint="@color/blue"
+        android:text="Annuler"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
