--- a/app/src/main/res/layout/fragment_center.xml
+++ b/app/src/main/res/layout/fragment_center.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="51dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:gravity="center"
         android:text="Choisissez un centre"
         android:textColor="@color/blue"
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="110dp"
         android:layout_marginBottom="70dp">
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -45,7 +45,7 @@
                 android:layout_marginTop="0dp"
                 android:background="#00000000"
                 android:text="Quitter"
-                android:textColor="@color/Mix"
+                android:textColor="@color/blue"
                 android:textSize="20sp" />
 
         </RelativeLayout>
@@ -82,7 +82,7 @@
             android:layout_marginBottom="6dp"
             android:background="#00000000"
             android:text="suivant"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ellipse2" />
 
