--- a/app/src/main/res/layout/fragment_dose.xml
+++ b/app/src/main/res/layout/fragment_dose.xml
@@ -25,7 +25,7 @@
             android:layout_marginTop="0dp"
             android:background="#00000000"
             android:text="Quitter"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             android:textSize="20sp" />
 
 
@@ -63,7 +63,7 @@
                     android:layout_height="50dp"
                     android:text="Réserver la premiére dose"
                     android:textSize="20sp"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:background="#462196F3"/>
 
                 <RadioButton
@@ -73,7 +73,7 @@
                     android:layout_marginTop="20sp"
                     android:background="#462196F3"
                     android:text="Réserver la deuxiéme dose"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:textSize="20sp" />
 
                 <RadioButton
@@ -83,7 +83,7 @@
                     android:layout_marginTop="20sp"
                     android:text="Réserver la troisiéme dose"
                     android:textSize="20sp"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:background="#462196F3"/>
             </RadioGroup>
         </LinearLayout>
@@ -134,7 +134,7 @@
             android:layout_marginBottom="6dp"
             android:background="#00000000"
             android:text="Retour"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -149,7 +149,7 @@
             android:layout_marginBottom="6dp"
             android:background="#00000000"
             android:text="suivant"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ellipse2" />
 
