--- a/app/src/main/res/layout/fragment_vaccineragment.xml
+++ b/app/src/main/res/layout/fragment_vaccineragment.xml
@@ -14,10 +14,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="51dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:gravity="center"
             android:text="Choisissez un vaccin"
             android:textColor="@color/blue"
@@ -37,7 +38,7 @@
             android:layout_marginStart="282dp"
             android:background="#00000000"
             android:text="Quitter"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             android:textSize="20sp" />
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,9 +62,9 @@
                     android:layout_alignParentBottom="true"
                     android:background="#462196F3"
                     android:padding="12dp"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:text=" AstraZeneca"
-                    android:textColor="@color/Mix"
+                    android:textColor="@color/black"
                     android:textSize="20sp">
 
                 </RadioButton>
@@ -73,12 +74,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:layout_marginTop="20sp"
                     android:background="#462196F3"
                     android:padding="12dp"
                     android:text=" Janssen"
-                    android:textColor="@color/Mix"
+                    android:textColor="@color/black"
                     android:textSize="20sp">
 
                 </RadioButton>
@@ -89,11 +90,11 @@
                     android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginTop="20sp"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:background="#462196F3"
                     android:padding="12dp"
                     android:text=" Sinopharm "
-                    android:textColor="@color/Mix"
+                    android:textColor="@color/black"
                     android:textSize="20sp">
                 </RadioButton>
 
@@ -103,11 +104,11 @@
                     android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginTop="20sp"
-                    android:buttonTint="@color/Mix"
+                    android:buttonTint="@color/blue"
                     android:background="#462196F3"
                     android:padding="12dp"
                     android:text=" Sinovac"
-                    android:textColor="@color/Mix"
+                    android:textColor="@color/black"
                     android:textSize="20sp">
 
                 </RadioButton>
@@ -158,7 +159,7 @@
             android:layout_marginBottom="6dp"
             android:background="#00000000"
             android:text="Retour"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -173,7 +174,7 @@
             android:layout_marginBottom="6dp"
             android:background="#00000000"
             android:text="suivant"
-            android:textColor="@color/Mix"
+            android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/ellipse2" />
 
