--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -19,7 +19,7 @@
 
         <ImageView
             android:id="@+id/editprofil_image_arrow"
-            android:layout_width="30dp"
+            android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:src="@drawable/ic_baseline_arrow_back_24" />
