--- a/app/src/main/res/layout/activity_set_password.xml
+++ b/app/src/main/res/layout/activity_set_password.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgotPassword"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:background="@color/white">
-
+    tools:context=".SetPassword">
     <ImageView
-        android:id="@+id/forgotpass_arrow"
+        android:id="@+id/setpasssword_arrow"
         android:layout_width="40dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_baseline_arrow_back_24"
@@ -18,20 +17,19 @@
         android:layout_marginLeft="8dp"
         />
 
-
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:layout_gravity="center"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/ic_baseline_lock_24" />
+        android:layout_marginTop="80dp"
+        android:src="@drawable/ic_baseline_lock_open_24"/>
 
     <TextView
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:text="MOT DE PASSE OUBLIE"
+        android:text="CHANGER LE MOT DE PASSE"
         android:textSize="23sp"
         android:textStyle="bold"
         android:textColor="@color/blue"
@@ -43,9 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:text="nous avons juste besoin de votre adresse e-mail enregistrée pour envoyer les instructions de réinitialisation de votre mot de passe"
+        android:text="assurez-vous de vous souvenir votre mot de passe"
         android:textColor="#7C000000"
-        android:gravity="center"/>
+        android:gravity="center"
+       />
 
     <EditText
         android:layout_width="match_parent"
@@ -54,20 +53,46 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/cercule_edittext"
-        android:hint="Entrer votre Email"
+        android:hint="Votre mot de passe actuel"
         android:paddingLeft="20dp"
-        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="12dp"
+        android:textColorHint="@color/blue"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/cercule_edittext"
+        android:hint="Votre nouveau mot de passe"
+        android:paddingLeft="20dp"
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="12dp"
+        android:textColorHint="@color/blue"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/cercule_edittext"
+        android:hint="Confirmer le mot de passe"
+        android:paddingLeft="20dp"
+        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
         android:drawablePadding="12dp"
         android:textColorHint="@color/blue"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/forgotpass_réinitiakiserMotPasse"
+        android:id="@+id/setpasssword_changerMotpasse"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="40dp"
         android:layout_marginLeft="40dp"
-        android:text="Réinitialiser le mot de passe"
+        android:text="changer le mot de passe"
         android:textSize="18sp"
         android:textColor="@color/white"
         android:backgroundTint="@color/blue"
@@ -75,12 +100,12 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/forgotpass_retour"
+        android:id="@+id/setpassword_button_annuler"
         android:layout_width="170dp"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
-        android:text="retour"
+        android:text="annuler"
         android:textSize="23sp"
         android:textColor="@color/blue"
         android:gravity="bottom|center"
