--- a/app/src/main/res/layout/fragment_dose.xml
+++ b/app/src/main/res/layout/fragment_dose.xml
@@ -53,6 +53,7 @@
 
 
             <RadioGroup
+                android:layout_marginRight="@+id/radiodose"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/radioGroup">
