--- a/app/src/main/res/layout/fragment_dateragment.xml
+++ b/app/src/main/res/layout/fragment_dateragment.xml
@@ -10,7 +10,7 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:layout_marginTop="80dp"
+       android:layout_marginTop="70dp"
        android:orientation="vertical">
 
 
@@ -39,7 +39,7 @@
            android:layout_marginLeft="55dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
-           android:layout_marginTop="25dp">
+           android:layout_marginTop="10dp">
 
            <CalendarView
                android:id="@+id/date_calendar_DateAppointment"
@@ -75,6 +75,16 @@
             android:textColor="@color/blue"
             android:textSize="20sp" />
 
+        <TextView
+            android:id="@+id/txtView_hour"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="495dp"
+            android:gravity="center"
+            android:text="Aperçu de l'heure choisie ici "
+            android:textSize="18dp" />
+
         <Button
             android:id="@+id/pick_time_button"
             android:layout_width="match_parent"
@@ -83,11 +93,12 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
+            android:layout_marginLeft="70dp"
             android:layout_marginTop="0dp"
-            android:layout_marginRight="90dp"
-            android:layout_marginBottom="245dp"
+            android:layout_marginRight="70dp"
+            android:layout_marginBottom="255dp"
             android:backgroundTint="@color/blue"
+            android:textSize="18sp"
             android:gravity="center"
             android:text="Sélectionnez l'heure"
             app:layout_constraintEnd_toEndOf="parent"
