--- a/app/src/main/res/layout/fragment_resume.xml
+++ b/app/src/main/res/layout/fragment_resume.xml
@@ -69,7 +69,7 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/date"
+                    android:id="@+id/resumer_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
@@ -93,7 +93,7 @@
 
 
                 <TextView
-                    android:id="@+id/vaccin"
+                    android:id="@+id/resumer_vaccin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
@@ -117,7 +117,7 @@
 
 
                 <TextView
-                    android:id="@+id/dose"
+                    android:id="@+id/resumer_dose"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
@@ -138,7 +138,7 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/centre"
+                    android:id="@+id/resumer_centre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="4dp"
