--- a/app/src/main/res/layout/fragment_dose.xml
+++ b/app/src/main/res/layout/fragment_dose.xml
@@ -22,8 +22,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="274dp"
-            android:layout_marginTop="0dp"
-            android:background="#00000000"
+            android:background="@color/nothing"
             android:text="Quitter"
             android:textColor="@color/blue"
             android:textSize="20sp" />
@@ -34,58 +33,55 @@
             android:layout_height="51dp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="0dp"
             android:gravity="center"
             android:text="Choisissez une dose"
             android:textColor="@color/blue"
-            android:textSize="23sp"
-            android:textStyle="bold" />
+            android:textSize="23dp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="-1dp"
             android:layout_marginBottom="300dp"
             android:orientation="horizontal"
             android:padding="10dp">
 
 
             <RadioGroup
-                android:layout_marginRight="@+id/radiodose"
+                android:id="@+id/radioGroup"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/radioGroup">
+                android:layout_height="match_parent">
 
                 <RadioButton
                     android:id="@+id/radioButton1"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="Réserver la premiére dose"
-                    android:textSize="20sp"
+                    android:background="@color/gray"
                     android:buttonTint="@color/blue"
-                    android:background="#462196F3"/>
+                    android:text="Réserver la premiére dose"
+                    android:textSize="20dp" />
 
                 <RadioButton
                     android:id="@+id/radioButton2"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginTop="20sp"
-                    android:background="#462196F3"
-                    android:text="Réserver la deuxiéme dose"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/gray"
                     android:buttonTint="@color/blue"
-                    android:textSize="20sp" />
+                    android:text="Réserver la deuxiéme dose"
+                    android:textSize="20dp" />
 
                 <RadioButton
                     android:id="@+id/radioButton3"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginTop="20sp"
-                    android:text="Réserver la troisiéme dose"
-                    android:textSize="20sp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/gray"
                     android:buttonTint="@color/blue"
-                    android:background="#462196F3"/>
+                    android:text="Réserver la troisiéme dose"
+                    android:textSize="20dp" />
             </RadioGroup>
         </LinearLayout>
 
@@ -108,7 +104,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="7dp"
-            android:layout_marginBottom="0dp"
             android:src="@drawable/ellipse1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -133,7 +128,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="6dp"
-            android:background="#00000000"
+            android:background="@color/nothing"
             android:text="Retour"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -148,7 +143,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="3dp"
             android:layout_marginBottom="6dp"
-            android:background="#00000000"
+            android:background="@color/nothing"
             android:text="suivant"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
